apps/70-tools/netbox/overlays/prod/dataangel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox
spec:
  template:
    metadata:
      labels:
        vixens.io/sizing.dataangel: V-small
      annotations:
        dataangel.io/bucket: "vixens-prod-netbox"
        dataangel.io/sqlite-paths: ""
        dataangel.io/fs-paths: "/opt/netbox/media"
        dataangel.io/s3-endpoint: "http://nas.truxonline.com:30157"
        dataangel.io/deployment-name: "netbox"
        dataangel.io/rclone-interval: "60s"
        dataangel.io/metrics-enabled: "true"
        dataangel.io/lock-enabled: "false"
    spec:
