apps/70-tools/netbox/overlays/prod/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox
spec:
  template:
    spec:
      containers:
        - name: netbox
          livenessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: localhost
          readinessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: localhost
        - name: netbox-worker
